--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <h3>Score: <span id="score">0</span></h3>
 <button id="start-button">Start/Pause Game</button>
+
+<div class="container">
 <div class="grid">
   <div></div>
   <div></div>
@@ -211,6 +213,37 @@
   <div></div>
   <div></div>
   <div></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+  <div class="taken"></div>
+</div>
+
+<div class="mini-grid">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
 </div>
   
 	<script defer src="script.js"></script>
